<resources>
    <string name="app_name">UAS</string>
    <string name="back_to_login_page"><u>Sudah punya akun, kembali ke halaman login</u></string>
    <string name="register_now"><u>Belum punya akun? Registrasi sekarang</u></string>
    <string name="intern_list">Intern List</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="nama_project">Nama Project</string>
    <string name="pic">PIC</string>
    <string name="nama_intern">Nama intern</string>
    <string name="telpon_intern">Telpon intern</string>
    <string name="register">Register</string>
    <string name="username">username</string>
    <string name="email">Email</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="data_project">Data Project</string>
    <string name="gointern">GoIntern</string>
    <string name="log_in">Log-in</string>
    <string name="login">login</string>
    <string name="data_intern">Data Intern</string>
    <string name="hello">Hello</string>
    <string name="edit_project">Edit Project</string>
    <string name="nama">Nama</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select_date">Select Date</string>
    <string name="update">Update</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="umur">Umur</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="alamat">Alamat</string>
    <string name="no_telpon">No. Telpon</string>
    <string name="performa">Performa</string>
    <string name="project">Project</string>
    <string name="strip">-</string>
    <string name="profil_nama">Profil Nama</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="detail_project">Detail Project</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="add_new_project">Add New Project</string>
    <string name="add">Add</string>
    <string name="add_new_intern">Add New Intern</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="clear">Clear</string>
</resources>