<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradwallpaper"
    tools:context=".EditProjectActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="625dp"
        android:orientation="vertical">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFADAD"
            android:title="@string/edit_project"
            android:titleTextColor="#7F00FF"
            app:menu="@menu/menu_home"
            tools:targetApi="m" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    style="@style/TVDataIntern"
                    android:text="@string/nama_project" />
                <EditText
                    android:id="@+id/ETDataNamaProject"
                    android:text="@string/nama"
                    style="@style/ETDataIntern"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />

                <TextView
                    style="@style/TVDataIntern"
                    android:text="@string/pic" />
                <TextView
                    android:id="@+id/TVDataPICProject"
                    android:text="@string/pic"
                    style="@style/ETDataIntern"/>

                <TextView
                    style="@style/TVDataIntern"
                    android:text="@string/start_date" />
                <TextView
                    android:id="@+id/TVDataStartDateProject"
                    android:text="@string/start_date"
                    style="@style/ETDataIntern"/>

                <TextView
                    style="@style/TVDataIntern"
                    android:text="@string/end_date" />
                <EditText
                    android:id="@+id/ETDataEndDateProject"
                    android:text="@string/select_date"
                    style="@style/ETDataIntern"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor,TextFields" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="20dp">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradbutton"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/update"/>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>